# python_machine_learning_practise

./: pyproject.toml
ch02_movie_recommendation/: naiive_bayes.py
