[project]
name = "practise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
